[gd_scene load_steps=3 format=3 uid="uid://dbwhj3a6xulsk"]

[ext_resource type="Script" path="res://Scenes/title_box.gd" id="1_qw8tw"]
[ext_resource type="FontFile" uid="uid://dwf6ukkopt1g8" path="res://betaRelease/GILB____.TTF" id="2_v2173"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
follow_viewport_enabled = true
script = ExtResource("1_qw8tw")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 809.0
offset_bottom = 553.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="playButton" type="Button" parent="PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.45098, 0.317647, 0.933333, 0.643137)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.917647, 0.2, 0.905882, 1)
theme_override_colors/icon_hover_color = Color(0.576471, 0.478431, 0.964706, 1)
theme_override_fonts/font = ExtResource("2_v2173")
theme_override_font_sizes/font_size = 40
action_mode = 0
button_mask = 3
text = "      Play      "
vertical_icon_alignment = 0

[node name="optionsButton" type="Button" parent="PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.45098, 0.317647, 0.933333, 0.643137)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.917647, 0.2, 0.905882, 1)
theme_override_colors/icon_hover_color = Color(0.576471, 0.478431, 0.964706, 1)
theme_override_fonts/font = ExtResource("2_v2173")
theme_override_font_sizes/font_size = 40
action_mode = 0
button_mask = 3
text = "Options"
vertical_icon_alignment = 0

[node name="quitButton" type="Button" parent="PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.45098, 0.317647, 0.933333, 0.643137)
theme_override_colors/icon_normal_color = Color(0.917647, 0.627451, 0.905882, 0.454902)
theme_override_colors/icon_hover_color = Color(0.576471, 0.478431, 0.964706, 1)
theme_override_fonts/font = ExtResource("2_v2173")
theme_override_font_sizes/font_size = 40
action_mode = 0
button_mask = 3
text = "Quit"
vertical_icon_alignment = 0

[connection signal="pressed" from="PanelContainer/MarginContainer/CenterContainer/VBoxContainer/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/CenterContainer/VBoxContainer/optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/CenterContainer/VBoxContainer/optionsButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/CenterContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
